<resources>
    <string name="app_name" translatable="false">Ⲡϩⲏⲧ ⲛⲬⲏⲙⲓ</string>
    <string name="title_activity_settings">Settings</string>
    <string name="general_title" translatable="false">General عام</string>
    <string name="language_title" translatable="false">Language اللغه</string>
    <string name="main_introduction">Ⲡⲓⲟⲩⲱⲛⲥⲁϫⲓ\nIntroduction</string>
    <string name="main_dialects">Ⲛⲓϫⲓⲛⲥⲁϫⲓ\nDialects</string>
    <string name="main_references">Ⲛⲓⲣⲉϥⲙⲓⲥⲓ\nReferences</string>
    <string name="main_about">Ϧⲁ\nAbout us</string>
    <string name="main_word">Ⲡⲓⲥⲁϫⲓ ⲙ̀ⲡⲁⲓⲉ̀ϩⲟⲟⲩ\ntoday\'s word</string>
    <string name="main_new">"**notes**\nyou can add the Egyptian calender and today's word as a widget in your home screen.\n**new**\nfrom setting now you can show coptic calender with coptic numbers "</string>
    <string name="references_title_coptic" translatable="false">Ⲛⲓⲣⲉϥⲙⲓⲥⲓ</string>
    <string name="references_title">References</string>
    <string name="string_word_title_coptic" translatable="false">ⲡⲓⲥⲁϫⲓ ⲙ̀ⲡⲁⲓⲉ̀ϩⲟⲟⲩ</string>
    <string name="string_word_title">Today\'s word</string>
    <string name="string_introduction_title_coptic" translatable="false">Ⲡⲓⲟⲩⲱⲛⲥⲁϫⲓ</string>
    <string name="string_introduction_title">Introduction</string>
    <string name="string_introduction">*we Are sorry that English translation not available yet*\nفي بدايه القصه قائد عظيم معروف باسم\"مينا\" او \"نارمر\" وحد بلدنا عشان يأسس بلد اسمها \"كمت\" المكان اللي بدأت فيه رحلة التاريخ .\n هنا كل شئ ابتدا بتاسيس اول دوله و اعظم حضارة علي مر العصور .\n  و مع استقرار البلد بدأ ظهور اول خط كتابه في مصر علشان يدون اقدم لغه معروفه حاليا للبشريه \"ر ن كمت\" او المعروفه باللغه المصريه القديمه اللي بدأت بخط  \"مدو نتر\" او الخط المقدس او اللي عرفهولنا الاجانب علي ان اسمه \"هيروغليفي\" وهي كلمه يونانيه معناها برضو الخط المقدس .\n  لغتنا كانت حاجه مقدسه و عظيمه عند اجدادنا و كانت هي اقوي رمز من رموز هويتنا و تفردنا .\n  و  زي جمال اجدادنا اختارو للغه حروف جميله متاخده من كل حاجه حواليهم في الطبيعه بس لانه كان صعب يكتبو كل حاجه برسومات صعبه و متقنه كده بدا ظهور خط مختصر للغه و اول من بدا استخدامه كان الكهنه و اللي احنا عارفينه باسم \"الهيراطيقي\" او خط الكهنه و اللي بعض الناس بتفتكره حاجه مختلفه جدا او حتي لغه تانيه لكن في الحقيقه هو شكل مبسط من \"المدو نتر\" او \"الهيروغليفي\" بكل خصائصه و حروفه يعني بالظبط كده زي الفرق بين الرقعه و النسخ مش خط جديد ولا حاجه و مش مرحله لوحده .\n  بعدها مرت الايام و السنين و القرون علي لغتنا و كأي لغه تانيه بدأت تتطور و تتغير و بدا يظهر خط تالت وهو \"الديموطيقي\" اللي ترجمتها خط الشعب او خط العامه و الخط ده كان شبه العربي بيتكتب من اليمين و حروفه مشبكه في بعض و مع ظهور الخط ده حصل تغيرات في اللغه زي سقوط حروف و تغيير نطق كلمات و تركيبات في اللغه.\n  لكن الخط ده كان صعب جدا و بعض المتخصصين في دراسته بيقولو عليه بالبلدي كده اشبه بنبش الفراخ.\n  و في اواخر العصر ده كانت بدات تظهر الحضاره اليونانيه بخطها اللي اتاخد اصلا من \"المدو-نتر \"فاكرينه ! و اللي اتاخد منها اغلب الخطوط الموجودة حاليا.\n  جدودنا شافو ان الخط ده اوضح و اسهل و بدا ينتشر و بدأ محاولات كتابة لغتنا بالخط اليوناني و ده كان قبل دخول الأسكندر مصر اصلا و بعدها دخل اليونانيين و انتشر الخط ده جدا و بعدهم الرومان و بعدهم دخلت المسيحيه مصر او في الوقت ده \"كامي\" او \"كيمي\" ولان المسيحيين كانو بيحاولو يبعدو عن اي شي من المعبودات القديمه اتبنو اكتر كتابه لغتنا بالخط اليوناني و تنظيمه و اضافو عليها ٧ حروف بس من الديموطيقي لان أصواتهم مش موجود في اليوناني يعني حاجه كده زي الفرانكو و تغيير الخط لخط جديد برضو ادي لبعض التغييرات الطبيعيه و التطورات اللغويه لكن اصول لغتنا هي هي,  و الخط ده لانه اتكتب فيه حروف متحركه ظهرت فيه لاول مره اختلاف لهجات مصر القديمه زي  الصعيديه و البحيريه و الاخميميه والاسيوطيه و الفيوميه و البشموريه و كانت اوسعهم انتشاراً الصعيديه و تعتبر هي اللغه الادبيه و استقرت اللغه علي كده لحد ما دخل العرب مصر ....\n  و اللي اطلقو علي سكان مصر الاصليين قبط و اللغه دي اللغه القبطيه و من هنا جت تسميه الخط ده بالخط القبطي يعني الاسم و الخط واللغه ملهمش علاقه اصلا بالمسيحيه الا انها كانت ديانه اغلبيه مصر في الوقت ده.\n  و في القرن العاشر بدأ الاقباط يحسو ان لغتهم بتضعف مقابل العربيه لأسباب عده من اهمها الاقباط المسيحيين و الاقباط المسلمين نفسهم بجانب تغيير اللغه الرسميه لمصر للعربيه و محاولات التطبيع العربي القويه من الحكام العرب.\n  فقرر في الوقت ده بطريرك الكنيسه انه يوحد لهجه الصلاه في الكنايس باكتر لهجه متاح ليها كتب و نساخ اللي هي اللهجه البحيريه و اللي ادي لانتشارها بشكل كبير مقابل اللهجات التانيه علي مستوي مصر .\n  و لما حس الاقباط ان لغتهم بدات تضيع حاولو يكتبوها بالحروف العربيه ذي ما كتبوها قبل كده باليوناني و ده ادي لاخر تغيير طبيعي في اللغه و ظهور ما يعرف باللفظ القبطي البحيري المتاخر وده تقريبا اللفظ او اللهجه الوحيده اللي نقدر نقول اننا سمعناها و استلمناها من اجدادنا.\n  و فضلت اللغه تضعف واحده واحده لحد ما كله تخلي عنها الا الكنيسه المصريه و فضلت اللغه حبيسه جدرانها لحد ما ظهر علم المصريات و القبطيات و بدا الاهتمام باللغه من جديد.\n  و في القرن ال ١٩ كان في منصب بطريرك الكنيسه البابا كيرلس الرابع و اللي حس ان اللفظ المتاخر فيه بعض اللخبطه و الخلط للحروف فكلف شخص في الوقت ده اسمه \"عريان افندي جرجس مفتاح\" لاعاده اللغه لاصلها او اعادتها الي ما قبل دخول العرب و لكن عريان افندي اتجه لنطق الحروف اليونانيه الحالي بدلا من دراسه الحروف و اللهجه المصريه نفسها و تنقيحها.\n  فلا يخفي علي اي دارس متعمق في اللغه انه بدون قصد اخترع لفظ جديد ادخل فيه حروف غريبه صعبه علي اللسان المصري و لكن لان الكنيسه اتبنت اللفظ ده انتشر في معظم الكنائس و في صلواتها حاليا و يكاد يكون هو اللفظ الوحيد المعروف لاغلب الناس للهجه البحيريه و طبعا احنا بنشجع الناس انها تتبع الكنيسه في طريقه صلواتها و لفظها و الحانها لغايه ما تغيره الكنيسه نفسها.\n  علي امل بان القائمين علي اللغه القبطيه في الكنيسه يبدأو في تعديلات تدريجيه لارجاع اللغه لاصلها  او علي الاقل في الحروف الاكثر اختلافا...  \n  و لكن في استخدام اللغه كلغه تحدث او دراسه كل دارس حر في استخدام اللفظ و اللهجه اللي شايفها مناسبه و صحيحه و الجدير بالذكر بان اللغه المصريه القديمه او القبطيه لو تم احيائها كلغه كلام  بين الناس او كلغه رسميه تانيه للبلاد من القياده السياسيه هتكون اقدم لغه حيه موجوده و معروفه للبشريه.\n  علي امل اننا نلاقي المصريين كلهم فخورين  بهويتهم المتفرده العظيمه و بلغتهم الاصليه و يقولو بيها دايما\n  Ⲧⲉⲛϣⲟⲩϣⲟⲩ ϫⲉ ⲁⲛⲟⲛ ϩⲁⲛⲣⲉⲙⲛⲭⲏⲙⲓ ⲛⲉ.\n  \n  Ⲣⲁϥⲓⲕ Ⲁⲩⲛⲓ . رفيق عوني</string>
    <string name="string_dialict_bohiric">ϯⲙⲉⲧⲣⲉⲙⲉⲙϩⲓⲧ (B)\n Bohiric dialects</string>
    <string name="string_dialict_sahidic">ϯⲙⲉⲧⲣⲉⲙⲣⲏⲥ (S)\n Sahidic dialects</string>
    <string name="about_facebook" translatable="false">https://facebook.com/theheartofkeami</string>
    <string name="about_version">Version 1.0.2</string>
    <string name="about_share">Share our APP with your friends</string>
    <string name="about_plan">The application is interested in the Egyptian national identity in general and the Egyptian language (Coptic) in particular, We aims to perform Coptic language lessons for daily usage And a speaking dictionary that contains the original known words And the creation of words that have no equivalent in Coptic as a result of stop using it, from the local Egyptian language and references to their creation\nHowever, the team lacks the language specialists to complete the project and We welcome them to contact us on our Facebook page</string>
    <string name="about_team">prepared and designed\nby\nϯⲙⲉⲧⲥⲟⲛ team\n\nTeam members\nRafik Awney Anwer\nMario Awney Anwer\nDr: Mina Fayek Zaki</string>
    <string name="about_caution">team members are beginners and not coptic language specialists so for honesty we have to mention that there is a probability of some mistakes or incomplete information  </string>
    <string name="about_contrbution"><![CDATA[
contributions:
<br>
Eng/ Mina in "Today's word" widget idea and programming.
<br>
in primary revision of coptic words , <a href="https://www.facebook.com/%D8%A8%D8%A7%D9%84%D9%82%D8%A8%D8%B7%D9%8A-%CF%A6%E2%B2%89%E2%B2%9B-%CF%AE%E2%B2%99%E2%B2%89%E2%B2%A7%E2%B2%A3%E2%B2%89%E2%B2%99%E2%B2%9B%CC%80%E2%B2%AD%E2%B2%8F%E2%B2%99%E2%B2%93-248627559356401"> بالقبطي - Ϧⲉⲛ Ϯⲙⲉⲧⲣⲉⲙⲛ̀ⲭⲏⲙⲓ </a> page.
]]></string>
    <string name="dialect_menu_bohiric" translatable="false">Ϯⲙⲉⲧⲣⲉⲙⲉⲙϩⲏⲧ</string>
    <string name="dialect_menu_sahidic" translatable="false">Ϯⲙⲉⲧⲣⲉⲙⲣⲏⲥ</string>
    <string name="dialect_menu_about">Ϧⲁ\nAbout the dialect</string>
    <string name="dialect_menu_alphabet">Ⲁⲗⲫⲁⲃⲏⲧⲟⲛ\nAlphabet</string>
</resources>