<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:padding="6dp"
    tools:context=".MainActivity">

    <View
        android:id="@+id/topview"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:layout_marginHorizontal="10dp"
        android:background="@color/colorTitleText"
        android:focusable="true"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@id/calenderview"
        app:layout_constraintTop_toBottomOf="@id/topview">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/app_name"
            android:textSize="35sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_margin="10dp"
            android:background="@color/colorText" />


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <Button
                    android:id="@+id/main_button_introduction"
                    style="@style/menu_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/main_introduction" />

                <Button
                    android:id="@+id/main_button_dialicts"
                    style="@style/menu_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/main_dialects" />

                <Button
                    android:id="@+id/main_button_word"
                    style="@style/menu_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/main_word" />


                <Button
                    android:id="@+id/main_button_references"
                    style="@style/menu_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/main_references" />

                <Button
                    android:id="@+id/main_button_about"
                    style="@style/menu_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/main_about" />


                <Button
                    android:id="@+id/btn_tts"
                    style="@style/main_Button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:text="Text To Speech"
                    android:textColor="@color/colorDisabled"
                    android:visibility="gone" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_margin="10dp"
                    android:background="@color/colorText" />

                <TextView
                    android:id="@+id/main_text_new"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/main_new"
                    android:textSize="18sp" />

            </LinearLayout>
        </ScrollView>


    </LinearLayout>

    <ImageView
        android:layout_width="30dp"
        android:layout_height="50dp"
        android:layout_margin="5dp"
        android:background="@android:color/transparent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/topview"
        app:srcCompat="@drawable/logo" />

    <ImageView
        android:layout_width="30dp"
        android:layout_height="50dp"
        android:layout_margin="5dp"
        android:background="@android:color/transparent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/topview"
        app:srcCompat="@drawable/logo" />

    <View
        android:id="@+id/calenderview"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_margin="10dp"
        android:background="@color/colorText"
        app:layout_constraintBottom_toTopOf="@id/main_calender_text" />

    <TextView
        android:id="@+id/main_calender_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="15 ⲡⲁⲱⲛⲓ 1922"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@id/bottomview"
        app:layout_constraintRight_toRightOf="parent" />

    <ImageView
        android:id="@+id/main_settings_button"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:src="@drawable/ic_action_settings"
        app:layout_constraintBottom_toTopOf="@id/bottomview"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/calenderview" />

    <View
        android:id="@+id/bottomview"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:layout_marginHorizontal="10dp"
        android:background="@color/colorTitleText"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>