<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:padding="6dp"
    tools:context=".IntroductionActivity">

    <View
        android:id="@+id/topview"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:layout_marginHorizontal="10dp"
        android:background="@color/colorTitleText"
        android:focusable="true"
        app:layout_constraintTop_toTopOf="parent" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@id/adView"
        app:layout_constraintTop_toBottomOf="@id/topview">

        <TextView
            android:id="@+id/intoduction_title_text_co"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/string_introduction_title_coptic"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/intoduction_title_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-black"
            android:gravity="center"
            android:text="@string/string_introduction_title"
            android:textSize="30sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_margin="10dp"
            android:background="@color/colorText" />

        <TextView
            android:id="@+id/introduction_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="sans-serif-black"
            android:gravity="center_horizontal"
            android:scrollbars="vertical"
            android:text="@string/string_introduction"
            android:textSize="18sp" />
    </LinearLayout>

    <View
        android:id="@+id/bottomview"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:layout_marginHorizontal="10dp"
        android:background="@color/colorTitleText"
        app:layout_constraintBottom_toBottomOf="parent" />

    <com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="5dp"
        ads:adSize="BANNER"
        ads:adUnitId="@string/ad_banner_introduction"
        ads:layout_constraintBottom_toTopOf="@id/bottomview" />


</androidx.constraintlayout.widget.ConstraintLayout>